--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,5 @@ android:
 script:
     - echo "Travis branch is $TRAVIS_BRANCH"
     - echo "Travis branch is in pull request $TRAVIS_PULL+REQUEST"
-  #  - mvn clean install -P "guice"
-  Exit /B 5 
+    - Exit /B 5 
   #hopefully stop neverending script
